<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_distance"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>


    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/edit_distance"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>


    <Button
        android:id="@+id/button_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/button_distance"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/conversion_distance"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/result_distance"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/conversion_distance"
        android:layout_below="@id/button_id"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>


    <TextView
        android:id="@+id/conversion_distance"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/result_distance"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>

    // there should be a keyboard that pops up when text edit is selected and goes away when drop down is selected

</RelativeLayout>